Footer spacing correction

--- a/Sandbox/portfolio/css/portfolio-screen.scss
+++ b/Sandbox/portfolio/css/portfolio-screen.scss
@@ -658,5 +658,9 @@ header {
     #navbar{
         padding: 0px 13% 0px 13%;
     }
+
+    #contact{
+        padding: 2% 13% 0% 13%;
+    }
     
 }
